# agri-alert-rl

./: .gitignore  .hfignore  Dockerfile  README.md  __init__.py  client.py  deploy.sh  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  upload_to_hf.py  validate-submission.sh
server/: Dockerfile  app.py  environment.py  requirements.txt
tests/: test_properties.py  test_unit.py
